objects/Store__c.object
<CustomObject>
    <description>This object will be used to save the details of various ATTR and AR stores for AT&amp;T</description>
    <fields>
        <fullName>Address1__c</fullName>
        <description>This field stores the first line of the store address</description>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>This field stores the second line of store address</description>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelTypeId__c</fullName>
        <description>This defines the Channel type for ATTR and AR for Store</description>
        <label>Channel Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChannelType__c</fullName>
        <description>This field defines the Channel type for the store differentiating the ATTR and AR stores</description>
        <label>Channel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This field stores the City for Store address</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosingDate__c</fullName>
        <description>This field defines the data when the store closed</description>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field stores the Country for Store address</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>This field stores the county for Store address</description>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerFacingName__c</fullName>
        <description>The field describes the store name that is visible to the AT&amp;T customer</description>
        <label>Customer Facing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCode__c</fullName>
        <description>This field defines the Store&apos;s Dealer Code</description>
        <label>DealerCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedEndDate__c</fullName>
        <label>Expected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>This field defines the Store&apos;s FAX number</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <description>This field defines the latitude and longitude for the geo location of the store. This will be used to find the distance between various stores.</description>
        <label>Geo Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IsGeoCertified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGeoCertified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationDbaName__c</fullName>
        <description>This field stores the database name for the location stored in Cinglepoint</description>
        <label>Location DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <description>This is the external id to uniquely identify each store. This is the unique reference id stored in CinglePoint</description>
        <externalId>true</externalId>
        <label>Location Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketGroup__c</fullName>
        <description>This field defines the store&apos;s market group</description>
        <label>Market Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketId__c</fullName>
        <description>This field defines the unique id for the Store&apos;s Market Group</description>
        <label>Market Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpeningDate__c</fullName>
        <description>The field defines the date when this store opened</description>
        <label>Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpusId__c</fullName>
        <description>This field defines the unique identifier by Store used by Opus</description>
        <label>Opus Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalHours__c</fullName>
        <description>The field defines the store&apos;s operating hours</description>
        <label>Original Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>This field stores the phone number for the store</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RegionId__c</fullName>
        <description>This field defines the unique id for Store&apos;s Region</description>
        <label>Region Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <description>This field defines the Store&apos;s Region Name</description>
        <label>Region Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddress1__c</fullName>
        <description>This field defines the first line of store&apos;s shipping address</description>
        <label>Shipping Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddress2__c</fullName>
        <description>This field defines the second line of Store&apos;s shipping address</description>
        <label>Shipping Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <description>This field defines the city for Store&apos;s shipping address</description>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingFax__c</fullName>
        <description>This field defines the Fax number for Store&apos;s shipping address</description>
        <label>Shipping Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingPhone__c</fullName>
        <description>This field defines the phone number for Store&apos;s shipping address</description>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <description>This field defines the state for Store&apos;s shipping address</description>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingZipCode__c</fullName>
        <description>This field defines the zip code for the Store&apos;s shipping address</description>
        <label>ShippingZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShoppingCenterName__c</fullName>
        <description>This field defines the name of the shopping center where store is located</description>
        <label>Shopping Center Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This field stores the state for Store address</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusEndDate__c</fullName>
        <description>This field defines the end date for the Status defined in Store&apos;s Status__c field</description>
        <label>Status End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusId__c</fullName>
        <description>This field defines the unique identifier for the Store&apos;s status</description>
        <label>Status Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusStartDate__c</fullName>
        <description>This field defines the start date for the Store status defines in Status__c fiels</description>
        <label>Status Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field defines the Store&apos;s Status</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>This field stores the zip code for store address</description>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OpeningDate__c</columns>
        <columns>ClosingDate__c</columns>
        <columns>LocationId__c</columns>
        <columns>GeoLocation__Latitude__s</columns>
        <columns>GeoLocation__Longitude__s</columns>
        <columns>Address1__c</columns>
        <columns>Address2__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Zip__c</columns>
        <columns>StatusEndDate__c</columns>
        <columns>ExpectedEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Redistribution</fullName>
        <columns>NAME</columns>
        <columns>LocationId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>GeoLocation__Latitude__s</columns>
        <columns>GeoLocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Reshma Jewrani</value>
        </filters>
        <label>Redistribution</label>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>